# numtype

./: .dprint.jsonc  .gitattributes  .gitignore  .libcst.codemod.yaml  .markdownlint.yaml  .mypyignore  .mypyignore-todo  .pre-commit-config.yaml  .taplo.toml  404.html  CONTRIBUTING.md  README.md  dprint.json  index.html  lefthook.yml  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml  renovate-config.json  renovate.json5
.github/ISSUE_TEMPLATE/: bug-report.yml  documentation.yml  feature-request.yml
.github/workflows/: ci.yml  docs.yml  preview-docs.yml  publish-pypi.yml  renovate-config.json  renovate.yml  zizmor.yml
assets/javascripts/: bundle.13a4f30d.min.js  bundle.50899def.min.js  bundle.56ea9cef.min.js  bundle.79ae519e.min.js  bundle.92b07e13.min.js  bundle.c8b220af.min.js  bundle.e71a0d61.min.js  bundle.f55a23d4.min.js
contributing/: index.html
dev/: index.html
dev/style/: index.html
docs/: .markdownlint.yaml  .nav.yml  contributing.md  index.md  reference.md  user_guide.md
docs/dev/: CHANGELOG.md  index.md  style.md
docs/overrides/: main.html
docs/style/: font.css  overrides.css  theme.css
docs/user/: differences.md
docs/user_guide/: differences.md  index.md
reference/: index.html
search/: search_index.json
src/: ruff.toml
src/_numtype/: .ruff.toml  __init__.py  __init__.pyi  _array.pyi  _dtype.pyi  _just.pyi  _nep50.pyi  _rank.pyi  _scalar.pyi  _scalar_co.pyi  _shape.pyi  op.pyi  ruff.toml
src/_numtype/@test/: .ruff.toml  test__numtype.pyi  test_can_array_0d.pyi  test_can_promote.pyi  test_nep50.pyi  test_rank.pyi  test_rank_shape.pyi  test_sequence_nd.pyi  test_to_array.pyi
src/numpy-stubs/: .ruff.toml  __config__.pyi  __init__.pyi  _array_api_info.pyi  _numtype.pyi  ctypeslib.pyi  dtypes.pyi  exceptions.pyi  matlib.pyi  ruff.toml  version.pyi
src/numpy-stubs/@test/: .ruff.toml  README.md
src/numpy-stubs/_core/: __init__.pyi  _add_newdocs.pyi  _asarray.pyi  _dtype.pyi  _exceptions.pyi  _internal.pyi  _machar.pyi  _methods.pyi  _multiarray_umath.pyi  _simd.pyi  _type_aliases.pyi  _ufunc_config.pyi  arrayprint.pyi  defchararray.pyi  einsumfunc.pyi  fromnumeric.pyi  function_base.pyi  getlimits.pyi  memmap.pyi  multiarray.pyi  numeric.pyi  numerictypes.pyi  overrides.pyi  records.pyi  shape_base.pyi  strings.pyi  umath.pyi
src/numpy-stubs/_typing/: __init__.pyi  _array_like.pyi  _callable.pyi  _char_codes.pyi  _dtype_like.pyi  _extended_precision.pyi  _nbit.pyi  _nbit_base.pyi  _nested_sequence.pyi  _scalars.pyi  _shape.pyi  _ufunc.pyi
src/numpy-stubs/_utils/: __init__.pyi  _inspect.pyi  _pep440.pyi
src/numpy-stubs/compat/: __init__.pyi  py3k.pyi
src/numpy-stubs/core/: __init__.pyi  _multiarray_umath.pyi  numeric.pyi  numerictypes.pyi  umath.pyi
src/numpy-stubs/ctypeslib/: __init__.pyi  _ctypeslib.pyi
src/numpy-stubs/distutils/: misc_util.pyi
src/numpy-stubs/f2py/: __init__.pyi  auxfuncs.pyi  cb_rules.pyi  common_rules.pyi  crackfortran.pyi  f2py2e.pyi  f90mod_rules.pyi  symbolic.pyi  use_rules.pyi
src/numpy-stubs/fft/: _helper.pyi  _pocketfft.pyi  helper.pyi
src/numpy-stubs/lib/: __init__.pyi  _array_utils_impl.pyi  _arraypad_impl.pyi  _arraysetops_impl.pyi  _arrayterator_impl.pyi  _datasource.pyi  _format_impl.pyi  _function_base_impl.pyi  _histograms_impl.pyi  _index_tricks_impl.pyi  _iotools.pyi  _nanfunctions_impl.pyi  _npyio_impl.pyi  _polynomial_impl.pyi  _scimath_impl.pyi  _utils_impl.pyi  (+10 more)
src/numtype/: __init__.py
style/: color.css  font.css
test/: README.md  bmp.py  generate_emath.py  generate_scalar_binops.py  main.py  mypy.py  pyproject.toml  ruff.toml
test/runtime/: ruff.toml  test_format_ignores.py  test_numtype.py
test/runtime/accept/: arithmetic.py  array_like.py  flatiter.py  lib_utils.py  literal.py  ma.py  mod.py  modules.py  ndarray_misc.py  numeric.py  random.py  recfunctions.py  scalars.py  shape.py  ufunclike.py  ufuncs.py
test/static/: .ruff.toml  ruff.toml  stubs_exist.pyi  test__numtype.pyi
test/static/accept/: .ruff.toml  README.md  arithmetic.pyi  array_api_info.pyi  array_constructors.pyi  arraypad.pyi  arrayprint.pyi  arraysetops.pyi  arrayterator.pyi  bitwise_ops.pyi  char.pyi  comparisons.pyi  constants.pyi  ctypeslib.pyi  dtype.pyi  emath.pyi  extended_precision.pyi  fft.pyi  flatiter.pyi  fromnumeric.pyi  getlimits.pyi  index_tricks.pyi  lib_function_base.pyi  lib_polynomial.pyi  lib_version.pyi  linalg.pyi  matrix.pyi  memmap.pyi  mod.pyi  multiarray.pyi  nbit_base_example.pyi  ndarray_assignability.pyi  ndarray_conversion.pyi  ndarray_misc.pyi  nditer.pyi  nested_sequence.pyi  npyio.pyi  polynomial_polybase.pyi  polynomial_polyutils.pyi  polynomial_series.pyi  (+13 more)
test/static/reject/: README.md  arithmetic.pyi  array_constructors.pyi  array_like.pyi  array_pad.pyi  arrayprint.pyi  arrayterator.pyi  bitwise_ops.pyi  char.pyi  chararray.pyi  constants.pyi  dtype.pyi  einsumfunc.pyi  flatiter.pyi  fromnumeric.pyi  histograms.pyi  index_tricks.pyi  lib_function_base.pyi  lib_polynomial.pyi  linalg.pyi  memmap.pyi  modules.pyi  multiarray.pyi  ndarray.pyi  ndarray_misc.pyi  nditer.pyi  nested_sequence.pyi  npyio.pyi  numerictypes.pyi  random.pyi  rec.pyi  ruff.toml  scalars.pyi  shape_base.pyi  stride_tricks.pyi  strings.pyi  testing.pyi  twodim_base.pyi  type_check.pyi  ufunc_config.pyi  (+3 more)
test/static/sanity/: stubs_exist.pyi
tests/: ruff.toml
theme/style/: font.css  theme.css
tool/: .mypyignore  .mypyignore-ge312.txt  .mypyignore-todo  .mypyignore-todo.txt  .mypyignore.txt  .ruff.toml  README.md  __init__.py  _ruff.py  codemod.py  compare_upstream.py  format_ignores.py  my.py  promotion.py  ruff.toml  stubtest.py  testgen.py  ufunc.py  unstub.py
tool/allowlists/: common-todo.txt  common.txt  lt-py312.txt  path-py311.txt  path-py312.txt  py311.txt  py312.txt  py313.txt  py314.txt  simd.txt  todo.txt
tool/test/: __init__.py  test_format_ignores.py
tools/: codemods.py  ruff.toml
user/: index.html
user/differences/: index.html
user_guide/: index.html
user_guide/differences/: index.html
(+234 files in other folders)
