[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "numtype"
version = "2.2.2.0.dev0"
description = "Experimental Typing Stubs for NumPy"
readme = "README.md"
authors = [{name = "Joren Hammudoglu", email = "jhammudoglu@gmail.com"}]
maintainers = [{name = "NumPy Developers", email = "numpy-discussion@python.org"}]
license = "BSD-3-Clause"
keywords = ["numpy", "typing", "stubs"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Stubs Only",
    "Typing :: Typed",
]
packages = [
    {include = "src/numpy-stubs"},
    {include = "src/numtype"},
]
requires-python = ">=3.10"
dependencies = []

    [project.optional-dependencies]
    numpy = ["numpy>=2.2.2,<2.3"]

    [project.urls]
    Homepage = "https://numpy.org/"
    Repository = "https://github.com/numpy/numtype/"
    Issues = "https://github.com/numpy/numtype/issues"
    Changelog = "https://github.com/numpy/numtype/releases"


[dependency-groups]
numpy = ["numtype[numpy]"]
dev = [
    {include-group = "numpy"},
    "libcst>=1.6.0",
    "ruff>=0.9.6",
    "mypy[faster-cache]>=1.15.0",
    "basedpyright>=1.27.0",
    "pytest>=8.3.4",
]


[tool.hatch.build]
packages = ["src/numpy-stubs", "src/numtype"]

    [tool.hatch.build.targets.sdist]
    exclude = [
        "/.github",
        "/.vscode",
        "/dist",
        "/doc",
        "/test",
        "/tool",
        ".libcst.codemod.yaml",
        ".pre-commit-config.yaml",
        "CONTRIBUTING.md",
        "uv.lock",
    ]


[tool.mypy]
python_version = "3.10"
mypy_path = "src"

pretty = false
show_error_context = false
show_error_code_links = false
show_traceback = false

strict = true
strict_bytes = true
strict_concatenate = true
local_partial_types = true
enable_error_code = ["ignore-without-code", "truthy-bool"]
disable_error_code = ["explicit-override"]
enable_incomplete_feature = ["PreciseTupleTypes"]
disallow_any_explicit = false
disallow_any_expr = false
disallow_any_decorated = false
warn_incomplete_stub = true
warn_unreachable = false
# basedmypy/mypy compat
# bare_literals = false
# default_return = false


[tool.pyright]
include = [
    "src/numpy-stubs",
    "src/numtype",
    "test/runtime",
    "test/static",
    "tool",
]
ignore = [".venv", "test/.venv"]
stubPath = "."
venvPath = "."
venv = ".venv"
pythonPlatform = "All"
pythonVersion = "3.10"
typeCheckingMode = "standard" # TODO(jorenham): set to "all"

deprecateTypingAliases = true
enableTypeIgnoreComments = false
enableReachabilityAnalysis = false
reportCallInDefaultInitializer = true
reportImportCycles = true
reportImplicitOverride = false             # TODO
reportMissingSuperCall = false
reportPrivateUsage = false
reportPropertyTypeMismatch = false
reportShadowedImports = true
reportUninitializedInstanceVariable = true
reportUnnecessaryTypeIgnoreComment = true
reportUnusedExpression = false
reportUnusedParameter = false
# basedpyright only
failOnWarnings = true
reportIgnoreCommentWithoutRule = true
reportImplicitAbstractClass = true
reportImplicitRelativeImport = true
reportImplicitStringConcatenation = false
reportInvalidCast = true
reportPrivateLocalImportUsage = true
reportUnannotatedClassAttribute = false   # TODO
strictGenericNarrowing = true


[tool.ruff]
src = ["src/numpy-stubs", "src/numtype", "test", "tool"]
extend-exclude = [".git", ".mypy_cache", ".tox", ".venv"]
force-exclude = true
# https://typing.readthedocs.io/en/latest/guides/writing_stubs.html#maximum-line-length
line-length = 130
preview = true

    [tool.ruff.format]
    docstring-code-format = true
    line-ending = "lf"

    [tool.ruff.lint]
    select = ["ALL"]
    ignore = [
        "FBT",    # flake8-boolean-trap
        "CPY",    # flake8-copyright
        "EM",     # flake8-errmsg
        "FIX",    # flake8-fixme
        "ANN401", # flake8-annotations: any-type
        "PYI041", # flake8-pyi:         redundant-numeric-union
    ]

        [tool.ruff.lint.per-file-ignores]
        "*.pyi" = [
            "N",       # pep8-naming
            "TD",      # flake8-todo
            "COM812",  # flake8-commas: missing-trailing-comma
            "PYI054",  # flake8-pyi:    numeric-literal-too-long
            "PLC2701", # pylint/C:      import-private-name
        ]

        [tool.ruff.lint.flake8-builtins]
        builtins-allowed-modules = ["random"]

        [tool.ruff.lint.flake8-import-conventions]
        banned-from = [
            "abc",
            "basedtyping",
            "ctypes",
            "datetime",
            "os",
            "sys",
            "numpy",
            "numpy.typing",
        ]
            [tool.ruff.lint.flake8-import-conventions.extend-aliases]
            "ctypes" = "ct"
            "datetime" = "dt"
            "numpy" = "np"
            "numpy.typing" = "npt"
            "numtype" = "nt"

        [tool.ruff.lint.isort]
        case-sensitive = true
        combine-as-imports = true
        extra-standard-library = ["_typeshed", "typing_extensions"]
        known-first-party = ["numpy"]
        split-on-trailing-comma = true

        [tool.ruff.lint.pydocstyle]
        convention = "numpy"

        [tool.ruff.lint.pylint]
        allow-dunder-method-names = ["__array__", "__array_ufunc__"]


[tool.typos.default]
extend-ignore-identifiers-re = ['ND|nd']

[tool.typos.files]
extend-exclude = ["*.pyi", ".mypyignore"]
