[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "numtype"
version = "2.2.3.0.dev0"
description = "Experimental Typing Stubs for NumPy"
readme = "README.md"
authors = [{name = "Joren Hammudoglu", email = "jhammudoglu@gmail.com"}]
maintainers = [{name = "NumPy Developers", email = "numpy-discussion@python.org"}]
license = "BSD-3-Clause"
keywords = ["numpy", "typing", "stubs"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Stubs Only",
    "Typing :: Typed",
]
packages = [
    {include = "src/_numtype"},
    {include = "src/numpy-stubs"},
    {include = "src/numtype"},
]
requires-python = ">=3.10"
dependencies = []

    [project.optional-dependencies]
    numpy = ["numpy>=2.2.3,<2.3"]

    [project.urls]
    Homepage = "https://numpy.org/"
    Repository = "https://github.com/numpy/numtype/"
    Issues = "https://github.com/numpy/numtype/issues"
    Changelog = "https://github.com/numpy/numtype/releases"


[dependency-groups]
dev = [
    "basedpyright>=1.28.1",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "ruff>=0.9.10",
]
numpy = ["numtype[numpy]"]
orjson = ["orjson>=3.10.15"] # speeds up mypy cache, but is missing 3.13t wheels


[tool.uv]
default-groups = ["dev", "numpy", "orjson"]


[tool.hatch.build]
packages = ["src/_numtype", "src/numtype", "src/numpy-stubs"]

    [tool.hatch.build.targets.sdist]
    exclude = [
        "/.github",
        "/.vscode",
        "/dist",
        "/doc",
        "/test",
        "/tool",
        ".mypyignore",
        ".mypyignore-todo",
        "CONTRIBUTING.md",
        "uv.lock",
    ]


[tool.mypy]
mypy_path = "src"
explicit_package_bases = true

pretty = false
show_error_context = false
show_error_code_links = false
show_traceback = false

strict = true
strict_bytes = true
strict_concatenate = true
local_partial_types = true
enable_error_code = ["ignore-without-code", "truthy-bool"]
disable_error_code = ["explicit-override"]
enable_incomplete_feature = ["PreciseTupleTypes"]
disallow_any_explicit = false
disallow_any_expr = false
disallow_any_decorated = false
warn_incomplete_stub = true
warn_unreachable = false
# needed for stubtest, see https://github.com/python/mypy/issues/18744
disable_bytearray_promotion = true
disable_memoryview_promotion = true
# basedmypy/mypy compat
# bare_literals = false
# default_return = false


[tool.pyright]
include = ["src", "test", "tool"]
ignore = [".venv"]
stubPath = "src"
venvPath = "."
venv = ".venv"
pythonPlatform = "All"
typeCheckingMode = "strict"

deprecateTypingAliases = true
disableBytesTypePromotions = true
enableTypeIgnoreComments = false
enableReachabilityAnalysis = false
reportCallInDefaultInitializer = true
reportImportCycles = true
reportImplicitOverride = false             # TODO
reportInvalidStubStatement = false         # see execution environments
reportMissingSuperCall = false
reportPrivateUsage = false
reportPropertyTypeMismatch = false
reportSelfClsParameterName = false
reportShadowedImports = false              # causes a ~35% slowdown
reportUninitializedInstanceVariable = true
reportUnnecessaryTypeIgnoreComment = true
reportUnusedExpression = false
reportUnusedParameter = false
reportUnusedVariable = false
# basedpyright only
failOnWarnings = true
reportIgnoreCommentWithoutRule = true
reportImplicitAbstractClass = true
reportImplicitRelativeImport = true
reportImplicitStringConcatenation = false
reportInvalidCast = true
reportPrivateLocalImportUsage = true
reportUnannotatedClassAttribute = false   # TODO
strictGenericNarrowing = true

[[executionEnvironments]]
root = "src"
reportInvalidStubStatement = true
reportUnusedCallResult = true
reportUnusedVariable = true

[[executionEnvironments]]
root = "test"
reportAny = true
reportPrivateUsage = true
reportUnreachable = true
# basedpyright only
reportExplicitAny = true
reportUnsafeMultipleInheritance = true

[[executionEnvironments]]
root = "tool"
reportImplicitOverride = true
reportInvalidStubStatement = true
reportUnusedCallResult = true


[tool.ruff]
src = ["src", "test", "tool"]
extend-exclude = [".git", ".mypy_cache", ".tox", ".venv"]
force-exclude = true
# https://typing.readthedocs.io/en/latest/guides/writing_stubs.html#maximum-line-length
line-length = 130
preview = true

    [tool.ruff.format]
    docstring-code-format = true
    line-ending = "lf"

    [tool.ruff.lint]
    select = ["ALL"]
    ignore = [
        "FBT",    # flake8-boolean-trap
        "CPY",    # flake8-copyright
        "EM",     # flake8-errmsg
        "FIX",    # flake8-fixme
        "ANN401", # flake8-annotations: any-type
        "PYI041", # flake8-pyi:         redundant-numeric-union
    ]

        [tool.ruff.lint.per-file-ignores]
        "*.pyi" = [
            "N",       # pep8-naming
            "TD",      # flake8-todo
            "COM812",  # flake8-commas: missing-trailing-comma
            "PYI054",  # flake8-pyi:    numeric-literal-too-long
            "PLC2701", # pylint/C:      import-private-name
        ]

        [tool.ruff.lint.flake8-builtins]
        builtins-allowed-modules = ["random"]

        [tool.ruff.lint.flake8-import-conventions]
        banned-from = [
            "abc",
            "basedtyping",
            "ctypes",
            "datetime",
            "os",
            "sys",
            "numpy",
            "numpy.typing",
        ]
            [tool.ruff.lint.flake8-import-conventions.extend-aliases]
            "ctypes" = "ct"
            "datetime" = "dt"
            "numpy" = "np"
            "numpy.typing" = "npt"
            "numtype" = "nt"
            "_numtype" = "_nt"

        [tool.ruff.lint.isort]
        case-sensitive = true
        combine-as-imports = true
        extra-standard-library = ["_typeshed", "typing_extensions"]
        known-first-party = ["numpy", "numtype", "_numtype"]
        split-on-trailing-comma = true

        [tool.ruff.lint.pydocstyle]
        convention = "numpy"

        [tool.ruff.lint.pylint]
        allow-dunder-method-names = ["__array__", "__array_ufunc__"]


[tool.tox]
min_version = "4"
requires = ["tox-uv>=1"]
env_list = ["lint", "test", "pyright", "3.13", "3.12", "3.11", "3.10"]

    [tool.tox.env_run_base]
    description = "Run stubtest under {base_python}"
    commands = [["uv", "run", "-q", "-p={base_python}", "--active", "tool/stubtest.py"]]

    [tool.tox.env.lint]
    description = "lint"
    runner = "uv-venv-lock-runner"
    dependency_groups = ["dev"]
    commands = [
        ["ruff", "check", "--show-fixes"],
        ["ruff", "format", "--check"],
    ]

    [tool.tox.env.test]
    description = "pytest"
    runner = "uv-venv-lock-runner"
    dependency_groups = ["dev", "numpy"]
    commands = [["pytest"]]

    [tool.tox.env.pyright]
    description = "basedpyright"
    runner = "uv-venv-lock-runner"
    dependency_groups = ["dev"]
    commands = [["basedpyright", "--threads=3"]]

    [tool.tox.env.mypy]
    description = "mypy"
    runner = "uv-venv-lock-runner"
    dependency_groups = ["dev", "orjson"]
    commands = [["mypy", {replace = "posargs", default = ["."], extend = true}]]


[tool.typos.default]
extend-ignore-identifiers-re = ['ND|nd']

[tool.typos.files]
extend-exclude = ["*.pyi", ".mypyignore"]
