[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "numtype_test"
version = "0.1.0"
description = "NumType's testing app"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numtype",
    "pytest>=8.3.4",
    "basedmypy[faster-cache]>=2.9.1",
    # "mypy[faster-cache]>=1.14.1",
    "basedpyright>=1.26.0",
]
    [project.scripts]
    static = "main:static"

[tool.uv]
reinstall-package = ["numtype"]

    [tool.uv.pip]
    strict = true

    [tool.uv.sources]
    numtype = {path = ".."}

[tool.hatch.build]
packages = ["."]
